# aiscope

./: .gitattributes  .gitignore  BLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE-NOTES.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  changelog.md  contributing.md  introduction.md
docs/src/ci/: exit-codes.md  github-actions.md  pre-commit.md
docs/src/concepts/: conflict-kinds.md  how-it-works.md  reasoning-modes.md  scope.md  tools-and-subsystems.md
docs/src/getting-started/: first-scan.md  install.md  quickstart.md
docs/src/reference/: architecture.md  faq.md  frontmatter.md  troubleshooting.md
docs/src/tools/: agents-md.md  claude.md  copilot.md  cursor.md
docs/src/usage/: card.md  cli.md  diag.md  json.md  privacy.md  tui.md
src/: lib.rs  main.rs
src/canon/: mod.rs
src/cmd/: check.rs  mod.rs  scan.rs  watch.rs
src/detect/: mod.rs  tokens.rs
src/diag/: mod.rs
src/extract/: mod.rs  pattern.rs
src/frontmatter/: mod.rs
src/model/: mod.rs
src/parse/: mod.rs
src/reason/: mod.rs
src/render/: card.rs  json.rs  mod.rs  text.rs  tui.rs
src/scanner/: claude.rs  common.rs  copilot.rs  cursor.rs  mod.rs
tests/: copilot_only.rs  corpus.rs  privacy_guard.rs  smoke.rs
tests/corpus/: conditional_clauses.md  frontmatter_and_code.md  historical_narrative.md  multi_axis.md  negation_clause.md
tests/fixtures/claude/: CLAUDE.md
tests/fixtures/copilot/: copilot-instructions.md
tests/fixtures/copilot-only/.github/: copilot-instructions.md
tests/fixtures/copilot-only/.github/agents/: reviewer.agent.md
tests/fixtures/copilot-only/.github/instructions/: python.instructions.md  typescript.instructions.md
tests/fixtures/copilot-only/.github/prompts/: unit-test.prompt.md
tests/fixtures/copilot-only/apps/web/: AGENTS.md
tests/fixtures/cursor/: .cursorrules
tests/snapshots/: corpus__conditional_clauses.snap  corpus__frontmatter_and_code.snap  corpus__historical_narrative.snap  corpus__multi_axis.snap  corpus__negation_clause.snap
